--- a/views/createAccount.handlebars
+++ b/views/createAccount.handlebars
@@ -16,7 +16,7 @@
             <input type="password" class="form-control" id="createAccountPasswordID" placeholder="Contraseña">
         </div>
         <div class="mb-3 form-check">
-            <button type="button" id="createAccountButton" class="btn btn-primary" onclick="createAccount()">Crear Cuenta</button>
+            <button type="button" id="createAccountButton" class="btn btn-primary">Crear Cuenta</button>
         </div>
     </div>
 </div>
@@ -24,3 +24,5 @@
 <div class="text-center mb-3">
     <a id="returnLoginLink" href="/" class="btn btn-primary btn-lg">Volver</a>
 </div>
+
+<script type="module" src="/js/createAccount.js"></script>
