--- a/views/createTeam.handlebars
+++ b/views/createTeam.handlebars
@@ -7,8 +7,10 @@
             <input id="newTeamName" type="text" class="form-control" value="">
         </div>
         <div class="mb-3 form-group text-center">
-            <button id="addNewTeamButton" class="btn btn-lg btn-primary" onclick="addNewTeam()">Agregar Equipo</button>
+            <button id="addNewTeamButton" class="btn btn-lg btn-primary">Agregar Equipo</button>
         </div>
     </div>
     {{> newPokemon}}
 </div>
+
+<script src="/js/teambuilder.js"></script>
