--- a/views/modifyPassword.handlebars
+++ b/views/modifyPassword.handlebars
@@ -19,10 +19,12 @@
         <input type="password" class="form-control" id="newPasswordVerification">
     </div>
     <div class="mb-3 form-check">
-        <button type="button" id="modifyPasswordButton" class="btn btn-primary btn-lg" onclick="modifyPassword()">Cambiar contraseña</button>
+        <button type="button" id="modifyPasswordButton" class="btn btn-primary btn-lg">Cambiar contraseña</button>
     </div>
 </div>
 
 <div class="text-center mb-3">
     <a id="returnHomeLink" href="/home" class="btn btn-primary btn-lg">Volver</a>
 </div>
+
+<script src="/js/modifyPassword.js"></script>
