--- a/views/modifyUserData.handlebars
+++ b/views/modifyUserData.handlebars
@@ -34,10 +34,12 @@
         </select>
     </div>
     <div class="mb-3 form-check">
-        <button type="button" id="modifyUserDataButton" class="btn btn-primary btn-lg" onclick="modifyUserData()">Modificar</button>
+        <button type="button" id="modifyUserDataButton" class="btn btn-primary btn-lg">Modificar</button>
     </div>
 </div>
 
 <div class="text-center mb-3">
     <a id="returnHomeLink" href="/home" class="btn btn-primary btn-lg">Volver</a>
 </div>
+
+<script src="/js/modifyUserData.js"></script>
