Separados los app.METHOD en distintos archivos con Routers

--- a/views/battle.handlebars
+++ b/views/battle.handlebars
@@ -125,6 +125,6 @@
         </div>
     </div>
 </div>
-<form id="returnToLobbyForm" action="/battle/returnLobby" method="GET"></form>
+<form id="returnToLobbyForm" action="/battle/lobby" method="GET"></form>
 
 <script src="/js/battle.js"></script>
