--- a/views/createAccount.handlebars
+++ b/views/createAccount.handlebars
@@ -22,7 +22,7 @@
 </div>
 
 <div class="text-center mb-3">
-    <a id="returnLoginLink" href="/" class="btn btn-primary btn-lg">Volver</a>
+    <a id="returnLoginLink" href="/account/login" class="btn btn-primary btn-lg">Volver</a>
 </div>
 
 <script type="module" src="/js/createAccount.js"></script>
