--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -75,10 +75,10 @@
                 <input type="file" id="profilePhoto" name="profile_photo" accept="image/png, image/jpeg">
             </form>
             <div class="col-sm-12 col-lg-4">
-                <a class="btn btn-primary btn-lg" href="/home/modifyPassword">Cambiar contraseña</a>
+                <a class="btn btn-primary btn-lg" href="/home/change-password">Cambiar contraseña</a>
             </div>
             <div class="col-sm-12 col-lg-4">
-                <a class="btn btn-primary btn-lg" href="/home/modifyUserData">Modificar datos</a>
+                <a class="btn btn-primary btn-lg" href="/home/user-data">Modificar datos</a>
             </div>
         </div>
     </div>
