--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -3,6 +3,6 @@
         <a href="/home" class="btn btn-large btn-secondary">Mi usuario: {{user.username}}</a>
         <a href="/teambuilder" class="btn btn-large btn-secondary">Armador de equipos</a>
         <a href="/lobby" class="btn btn-large btn-secondary">Lobby de batallas</a>
-        <a href="/logout" class="btn btn-large btn-secondary">Cerrar Sesión</a>
+        <a href="/home/logout" class="btn btn-large btn-secondary">Cerrar Sesión</a>
     </div>
 </div>
