Primera versión jugable

--- a/views/battle.handlebars
+++ b/views/battle.handlebars
@@ -120,6 +120,7 @@
     </div>
     <div class="mt-5 bg-light mb-3 p-3 border col-sm-2 text-center">
         <h2>Mensajes del servidor</h2>
+        <h3 id="turnNumber"></h3>
         <div id="serverMessages">
 
         </div>
