Arreglado error en la lista de batallas jugadas.

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -101,7 +101,7 @@
                 <tr>
                     <td>{{this.ID_Battle}}</td>
                     <td>{{this.winner}}</td>
-                    <td>{{this.winner}}</td>
+                    <td>{{this.loser}}</td>
                     <td>{{this.result}}</td>
                 </tr>
                 {{/each}}
